# AzureStorageAssistant

./: .env.example  README.md  pyproject.toml  requirements.txt  server.py
