[project]
name = "azurestorageassistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "azure-core==1.33.0",
    "azure-storage-blob==12.25.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==44.0.2",
    "fastmcp==0.4.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "idna==3.10",
    "isodate==0.7.2",
    "markdown-it-py==3.0.0",
    "mcp[cli]==1.6.0",
    "mdurl==0.1.2",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pydantic-settings==2.8.1",
    "pygments==2.19.1",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "rich==14.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sse-starlette==2.2.1",
    "starlette==0.46.1",
    "typer==0.15.2",
    "typing-extensions==4.13.1",
    "typing-inspection==0.4.0",
    "urllib3==2.3.0",
    "uv==0.6.14",
    "uvicorn==0.34.0",
]
